--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/brands.min.css" integrity="sha512-EJp8vMVhYl7tBFE2rgNGb//drnr1+6XKMvTyamMS34YwOEFohhWkGq13tPWnK0FbjSS6D8YoA3n3bZmb3KiUYA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <style type="text/css"></style>
 <title>Rabbit Bros. Co &#8211; Marketing, Advertising, Design</title>  <script async src="https://www.googletagmanager.com/gtag/js?id=G-H4Q3S7VS5R"></script> <script>window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
